--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1100,13 +1100,7 @@ div.demo img {
 /*----------------------------------------*/
 /*  2.2 Theme Settings
 /*----------------------------------------*/
- .tp-theme-settings-area {
-  position: fixed;
-  top: 50%;
-  left: 0;
-  width: 240px;
-  background-color: #fff;
-  border: 1px solid #EAEAEF;
+.tp-theme-settings-area {
   -webkit-transform: translateY(-50%) translateX(-100%);
   -moz-transform: translateY(-50%) translateX(-100%);
   -ms-transform: translateY(-50%) translateX(-100%);
@@ -1129,14 +1123,10 @@ div.demo img {
 .tp-theme-settings-area.settings-opened .tp-theme-settings-close {
   opacity: 1;
 }
-.tp-theme-settings-open {
-  position: absolute;
-  top: -1px;
-  left: 100%;
-} */
+
 .tp-theme-settings-open button {
   background-color: var(--tp-common-white);
-  border: 1px solid #EAEAEF;
+  border: 1px solid #eaeaef;
   border-left: 0;
   width: 60px;
   height: 60px;
@@ -1147,8 +1137,8 @@ div.demo img {
   position: relative;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
-} */
-.tp-theme-settings-gear {
+}
+*/ .tp-theme-settings-gear {
   display: inline-block;
   -webkit-animation: tp-theme-setting-spin 4s linear infinite;
   -moz-animation: tp-theme-setting-spin 4s linear infinite;
